Improves layout and intro

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -13,7 +15,7 @@
     <header>
       <img id="logo" src="logo.png" />
       <div>
-        <p>Language / Idioma</p>
+        <h3>Language / Idioma</h3>
         <button id="pickEn" class="button languagePicker" onclick="pickLanguage('en')">English</button>
         <button id="pickPt" class="button languagePicker" onclick="pickLanguage('pt')">Português</button>
       </div>
@@ -26,6 +28,12 @@
           whith the goal of increaing the efficiency of the therapeutic process.
         </p>
         <p>
+          To help patients heal faster the app reduces the friction on the patient side making it easier for
+          them to engage in activities between sessions. Patient's adherence to therapy homework has been
+          proved to be a key factor in reducing treatment's duration. For the therapists, the app gives
+          easy access to the patient's activities responses.
+        </p>
+        <p>
           Although we all have many years in our career and our engineer joined us because he felt the need
           for an app like this during his own depression treatment, we surely don't think we know everything!
         </p>
@@ -33,18 +41,26 @@
           This app is being built for you! So we want to hear what's important for you and invite you
           to help design a tool that will really make you happy.
         </p>
-        <p>
-          <a class="button" href="https://pt.surveymonkey.com/r/psychologistteru">I'm a Therapist</a>
-        </p>
-        <p>
-          <a class="button" href="https://pt.surveymonkey.com/r/patientteru">I'm a Patient</a>
-        </p>
+        <div class="actions">
+          <p>
+            <a class="button" href="https://pt.surveymonkey.com/r/psychologistteru">I'm a Therapist</a>
+          </p>
+          <p>
+            <a class="button" href="https://pt.surveymonkey.com/r/patientteru">I'm a Patient</a>
+          </p>
+        </div>
       </div>
       <div id="pt">
         <h1>Obrigado pelo seu tempo!</h1>
         <p>
           Somos um time de duas psicólogas e um engenheiro de software que se juntaram para criar um aplicativo
           com o objetivo de aumentar a eficiência do processo terapêutico.
+        </p>
+        <p>
+          Para ajudar pacientes a terem uma melhora mais rápida, o app reduz as dificuldades no preenchimento
+          das atividades que ele deve fazer entre as sessões. Alguns estudos comprovam que a aderência do paciente
+          a essas atividades é um fator chave no tempo de duração do tratamento. Para os psicólogos, o app fornece
+          acesso fácil às respostas das atividades preenchidas pelo paciente.
         </p>
         <p>
           Embora todos tenhamos anos de carreira e nosso engenheiro tenha se juntado à nós por sentir falta de um
@@ -54,12 +70,14 @@
           Esse app está sendo feito pra você! Por isso, queremos ouvir o que é importante pra você e te convidar a
           moldar uma ferramenta que te deixe realmente feliz.
         </p>
-        <p>
-          <a class="button" href="https://pt.surveymonkey.com/r/terapeutasteru">Sou um Psicólogo</a>
-        </p>
-        <p>
-          <a class="button" href="https://pt.surveymonkey.com/r/pacientesteru">Sou um Paciente</a>
-        </p>
+        <div class="actions">
+          <p>
+            <a class="button" href="https://pt.surveymonkey.com/r/terapeutasteru">Sou um Psicólogo</a>
+          </p>
+          <p>
+            <a class="button" href="https://pt.surveymonkey.com/r/pacientesteru">Sou um Paciente</a>
+          </p>
+        </div>
       </div>
     </div>
     <script>
