Fixes document title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Teru App Research</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link rel="stylesheet" href="style.css" />
@@ -97,6 +97,7 @@
       }
 
       if (navigator.language.startsWith('pt')) {
+        document.title = 'Teru App - Pesquisa';
         pickLanguage('pt');
       }
       else {
